WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241338
InteractionRegionOverlay should use RenderLayer-cached regions instead of computing them itself
https://bugs.webkit.org/show_bug.cgi?id=241338
Summary
InteractionRegionOverlay should use RenderLayer-cached regions instead of com...
Tim Horton
Reported
2022-06-06 09:30:16 PDT
InteractionRegionOverlay should use RenderLayer-cached regions instead of computing them itself
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2022-06-06 09:31:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1305
EWS
Comment 2
2022-06-06 10:51:34 PDT
Committed
r295291
(
251337@main
): <
https://commits.webkit.org/251337@main
> Reviewed commits have been landed. Closing PR #1305 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-06-06 10:52:14 PDT
<
rdar://problem/94445894
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug