InteractionRegionOverlay should use RenderLayer-cached regions instead of computing them itself https://bugs.webkit.org/show_bug.cgi?id=241338

Reviewed by Simon Fraser.

* Source/WebCore/page/DebugPageOverlays.cpp:
(WebCore::RegionOverlay::shouldPaintOverlayIntoLayer):
(WebCore::InteractionRegionOverlay::updateRegion):
Stop computing InteractionRegions ourselves.

(WebCore::InteractionRegionOverlay::activeLayer):
Determine the layer from which to retrieve InteractionRegions. For now, we just
use the root layer, because that's where we stash all regions. Later, we'll
do a hit-test here to find the region under the mouse.

(WebCore::InteractionRegionOverlay::activeRegion):
Look up InteractionRegions cached on the aforementioned active layer, instead of
computing them ourselves.

(WebCore::InteractionRegionOverlay::drawRect):
Stop painting region-indicating borders into the overlay (see RenderLayerBacking changes).

(WebCore::InteractionRegionOverlay::mouseEvent):
Correctly map into layer coordinates. For now this is a no-op because we're using
the root layer, but it will be important in a future patch where we use regions
on a per-layer basis.

(WebCore::DebugPageOverlays::shouldPaintOverlayIntoLayer):
* Source/WebCore/page/DebugPageOverlays.h:
(WebCore::DebugPageOverlays::shouldPaintOverlayIntoLayerForRegionType):

* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::paintDebugOverlays):
(WebCore::RenderLayerBacking::paintContents):
Paint region-indicating borders into the layer, instead of into the page overlay.
This will make them correctly scroll along with the content, and layer correctly.

Canonical link: https://commits.webkit.org/251337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295291 268f45cc-cd09-0410-ab3c-d52691b4dbfc